[gd_scene load_steps=17 format=3 uid="uid://d1dimg4gwxobu"]

[ext_resource type="Script" path="res://scripts/game/Game.gd" id="1_8b1w1"]
[ext_resource type="Script" path="res://scripts/game/Camera.gd" id="2_8iia7"]
[ext_resource type="Texture2D" uid="uid://rcehjeafqa81" path="res://prefabs/user/border.png" id="2_uviet"]
[ext_resource type="FontFile" uid="uid://b5o12budjhyv7" path="res://fonts/font.ttf" id="3_f6rql"]
[ext_resource type="Script" path="res://scripts/game/managers/NoteManager.gd" id="4_567p8"]
[ext_resource type="Script" path="res://scripts/game/Cursor.gd" id="5_he3ju"]
[ext_resource type="Texture2D" uid="uid://dk8bu7ktdhcw" path="res://prefabs/user/cursor.png" id="5_s5dj5"]
[ext_resource type="PackedScene" uid="uid://dxmi7p40ic26a" path="res://prefabs/transition.tscn" id="7_tq6j5"]
[ext_resource type="Script" path="res://scripts/game/managers/AudioManager.gd" id="8_bg3u7"]
[ext_resource type="Script" path="res://scripts/game/InvisCursor.gd" id="9_gku1u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ewf8k"]
bg_color = Color(0.92549, 0.423529, 0.352941, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4kgtn"]
bg_color = Color(0.392157, 0.690196, 0.196078, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_hcogi"]
viewport_path = NodePath("HUD/HealthBarViewport")

[sub_resource type="Environment" id="Environment_2pdyn"]
background_mode = 1

[sub_resource type="Shader" id="Shader_0h38x"]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float circle_size : hint_range(0.0, 1.05);
uniform float screen_width;
uniform float screen_height;

void fragment() {
	float ratio = screen_width / screen_height;
	float dist = distance(vec2(0.5, 0.5), vec2(mix(0.5, UV.x, ratio), UV.y));
	COLOR.a = step(circle_size, dist);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6fa0p"]
shader = SubResource("Shader_0h38x")
shader_parameter/circle_size = 1.05
shader_parameter/screen_width = 1920.0
shader_parameter/screen_height = 1080.0

[node name="Game" type="Node3D"]
script = ExtResource("1_8b1w1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, 8.74228e-08, 1, -8.74228e-08, -7.64274e-15, -8.74228e-08, -1, 0, 0, -3.5)
current = true
script = ExtResource("2_8iia7")

[node name="HUD" type="Node3D" parent="."]

[node name="Border" type="Sprite3D" parent="HUD"]
pixel_size = 0.0025
texture = ExtResource("2_uviet")

[node name="TimeIntoMap" type="Label3D" parent="HUD"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.00100446, 1.60401, 0.000479102)
pixel_size = 0.003
double_sided = false
text = "0:00/0:00
"
font = ExtResource("3_f6rql")
font_size = 49

[node name="MapName" type="Label3D" parent="HUD"]
transform = Transform3D(-1, -0.0003963, 0.000613279, -0.000632765, 0.889464, -0.457004, -0.000364376, -0.457004, -0.889464, -3.09944e-06, 1.78837, 0.000213027)
pixel_size = 0.003
double_sided = false
text = "Billy Sick - Balls In Your Jaws"
font = ExtResource("3_f6rql")
font_size = 50

[node name="Misses" type="Label3D" parent="HUD"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -1.83288, -0.400792, 0.00155461)
pixel_size = 0.003
double_sided = false
text = "Misses"
font = ExtResource("3_f6rql")
font_size = 49

[node name="MissAmount" type="Label3D" parent="HUD/Misses"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.163797, 0)
pixel_size = 0.003
double_sided = false
text = "0"
font = ExtResource("3_f6rql")
font_size = 49

[node name="Hits" type="Label3D" parent="HUD"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -1.83039, -0.769405, 0.000479102)
pixel_size = 0.003
double_sided = false
text = "Hits"
font = ExtResource("3_f6rql")
font_size = 49

[node name="HitAmount" type="Label3D" parent="HUD/Hits"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.163797, 0)
pixel_size = 0.003
double_sided = false
text = "0"
font = ExtResource("3_f6rql")
font_size = 49

[node name="Total" type="Label3D" parent="HUD"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -1.83349, -1.13537, 0.000432968)
pixel_size = 0.003
double_sided = false
text = "Total
"
font = ExtResource("3_f6rql")
font_size = 49

[node name="TotalAmount" type="Label3D" parent="HUD/Total"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.163797, 0)
pixel_size = 0.003
double_sided = false
text = "0"
font = ExtResource("3_f6rql")
font_size = 49

[node name="HealthBarViewport" type="SubViewport" parent="HUD"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1280, 300)
render_target_update_mode = 4

[node name="HealthBarProgress" type="ProgressBar" parent="HUD/HealthBarViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_ewf8k")
theme_override_styles/fill = SubResource("StyleBoxFlat_4kgtn")
max_value = 5.0
value = 0.5
show_percentage = false

[node name="HealthBarSprite" type="Sprite3D" parent="HUD"]
transform = Transform3D(-0.406559, 0, -5.17463e-07, 0, 0.0355695, 0, 6.13888e-08, 0, -3.427, 0, -1.59695, 0)
pixel_size = 0.005
texture = SubResource("ViewportTexture_hcogi")

[node name="Combo" type="Label3D" parent="HUD"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.42671, -1.33952, 0)
pixel_size = 0.003
double_sided = false
modulate = Color(0.619608, 0.619608, 0.619608, 0.0901961)
text = "0x"
font = ExtResource("3_f6rql")
font_size = 76
horizontal_alignment = 2
width = 600.0

[node name="FailedText" type="Label3D" parent="HUD"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
visible = false
pixel_size = 0.003
double_sided = false
modulate = Color(1, 0.454902, 0.439216, 1)
text = "Failed!"
font = ExtResource("3_f6rql")
font_size = 85

[node name="Mods" type="Label3D" parent="HUD"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 1.83249, -0.348976, 0.00155461)
visible = false
pixel_size = 0.003
double_sided = false
text = "Mods"
font = ExtResource("3_f6rql")
font_size = 49

[node name="ModsString" type="Label3D" parent="HUD/Mods"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0650738, 0)
pixel_size = 0.003
double_sided = false
font = ExtResource("3_f6rql")
font_size = 49
vertical_alignment = 0

[node name="ReplayLabel" type="Label3D" parent="HUD"]
transform = Transform3D(-1, 0, -8.74228e-08, -3.34397e-08, 0.923953, 0.382506, 8.07745e-08, 0.382506, -0.923953, 0, -1.74367, 0)
visible = false
pixel_size = 0.003
double_sided = false
text = "REPLAY"
font = ExtResource("3_f6rql")
font_size = 49

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_2pdyn")

[node name="NoteSpawner" type="Node3D" parent="."]
script = ExtResource("4_567p8")

[node name="MusicStream" type="AudioStreamPlayer" parent="."]

[node name="Cursor" type="Sprite3D" parent="."]
pixel_size = 0.0001
texture = ExtResource("5_s5dj5")
script = ExtResource("5_he3ju")

[node name="Transition" parent="." instance=ExtResource("7_tq6j5")]
z_index = 4096
material = SubResource("ShaderMaterial_6fa0p")

[node name="AudioManager" type="Node3D" parent="."]
script = ExtResource("8_bg3u7")

[node name="InvisCursor" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0114087)
script = ExtResource("9_gku1u")

[node name="DbgInfoParent" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Debug Info:"

[node name="DbgInfo" type="Label" parent="DbgInfoParent"]
layout_mode = 0
offset_top = 24.0
offset_right = 40.0
offset_bottom = 47.0

[editable path="Transition"]
